# python-package-cookiecutter

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  DEPENDABOT_SETUP.md  LICENSE  README.md  all_rules  cliff.toml  cookiecutter.json  index.html  mkdocs.yml  pyproject.toml  ruff.toml  rules.tomlish  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: 1_generation_bug_report.yaml  2_project_bug_report.yaml  3_generation_feature_request.yaml  4_project_feature_request.yaml  5_question.yaml  config.yaml
.github/workflows/: README.md  dependabot-automerge.yml  github-release.yml  release.yaml
customization/: index.html
docs/: README.md  customization.md  index.md  overview.md  quickstart.md  template-guide.md
docs/source/: conf.py  index.rst
hooks/: README.md  k  license.py  post_gen_project.py  post_gen_project.uv  pre_gen_project.py  pre_gen_project.uv  pre_prompt.py  pre_prompt.uv  task.py
overview/: index.html
quickstart/: index.html
search/: search_index.json
template-guide/: index.html
tests/: __init__.py  conftest.py  test_build_validation.py  test_cli_integration.py  test_configuration_matrix.py  test_cookiecutter_json.py  test_cross_platform.py  test_default_project.py  test_edge_cases.py  test_generate_projects.py  test_generated_project.py  test_integration.py  test_performance.py  test_poe_tasks.py
{{ cookiecutter.package_name }}/: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  cliff.toml  mkdocs.yml  pyproject.toml  {% if cookiecutter.license == "AGPL-3.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "BSD-2-Clause" %}LICENSE{% endif %}  {% if cookiecutter.license == "GPL-3.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "apache-2.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "bsd-3-clause" %}LICENSE{% endif %}  {% if cookiecutter.license == "bsl-1.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "gpl-2.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "gpl-3.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "lgpl-2.1" %}LICENSE{% endif %}  {% if cookiecutter.license == "mit" %}LICENSE{% endif %}  {% if cookiecutter.license == 'Apache-2.0' %}LICENSE{% endif %}  {% if cookiecutter.license == 'MIT' %}LICENSE{% endif %}
{{ cookiecutter.package_name }}/.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yaml
{{ cookiecutter.package_name }}/.github/ISSUE_TEMPLATE/: 3_question.yaml  config.yaml
{{ cookiecutter.package_name }}/.github/workflows/: README.md  docs.yml  github-release.yml  release.yaml
{{ cookiecutter.package_name }}/docs/: changelog.md  contributing.md  gen_ref_pages.py  index.md
{{ cookiecutter.package_name }}/docs/getting-started/: configuration.md  installation.md  quickstart.md
{{ cookiecutter.package_name }}/docs/user-guide/: cli.md  examples.md
{{ cookiecutter.package_name }}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  self_subcommand.py  {% if cookiecutter.use_pydantic_settings %}settings.py{% endif %}  {% if cookiecutter.use_pydantic_settings == 'yes' %}settings.py{% endif %}
{{ cookiecutter.package_name }}/tests/: __init__.py  conftest.py  test_cli.py
{{cookiecutter.package_name}}/: .gitignore  README.md  pyproject.toml  {% if cookiecutter.license == "agpl-3.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "apache-2.0" %}LICENSE{% endif %}  {% if cookiecutter.license == "bsd-2-clause" %}LICENSE{% endif %}  {% if cookiecutter.license == "bsd-3-clause" %}LICENSE{% endif %}  {% if cookiecutter.license == "gpl-2.0" %}LICENSE{% endif %}  {% if cookiecutter.license == 'Apache-2.0' %}LICENSE{% endif %}  {% if cookiecutter.license == 'MIT' %}LICENSE{% endif %}
{{cookiecutter.package_name}}/.github/: {% if cookiecutter.use_dependabot == 'yes' %}dependabot.yml{% endif %}
{{cookiecutter.package_name}}/.github/ISSUE_TEMPLATE/: 1_bug_report.yaml  config.yml
{{cookiecutter.package_name}}/.github/workflows/: README.md  release.yaml
{{cookiecutter.package_name}}/src/{{cookiecutter.package_name}}/: __init__.py  __main__.py  self_subcommand.py  {% if cookiecutter.use_pydantic_settings == 'yes' %}settings.py{% endif %}
{{cookiecutter.project_slug}}/: .gitignore  README.md  pyproject.toml
{{cookiecutter.project_slug}}/.github/workflows/: README.md  release.yaml
{{cookiecutter.project_slug}}/src/{{cookiecutter.project_slug}}/: __main__.py
