[project]
name = "python-package-cookiecutter"
version = "1.2.6"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "poethepoet>=0.35.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.poe.tasks]

test.cmd = "pytest"
test.help = "Test cookiecutter package."

ruff_check.cmd = "ruff check ."
ruff_format.cmd = "ruff format ."

# Release tasks
_patch_bump = "uv version --bump patch"
_minor_bump = "uv version --bump minor"
_major_bump = "uv version --bump major"

_add = "git add pyproject.toml uv.lock"
_commit = {shell = "git commit -m v`uv version --short`"}
_tag = {shell = "git tag v`uv version --short`"}
_push = "git push --all"
_push_tags = "git push --tags"

_update_pyproject = ["_add", "_commit", "_tag", "_push_tags", "_push"]

release_patch.sequence = [ "_patch_bump", "_update_pyproject"]
release_patch.help = "Publish patch release."
release_minor.sequence = [ "_minor_bump", "_update_pyproject"]
release_minor.help = "Publish minor release."
release_major.sequence = [ "_major_bump", "_update_pyproject"]
release_major.help = "Publish major release."

release.ref = "release_patch"
release.help = "Publish patch release"

# Create a project with the template for local testing.

_tmpdir = "mkdir -p tmp"
_generate = "cookiecutter --no-input -o tmp --overwrite-if-exists ."
bake.sequence = [ "_tmpdir", "_generate" ]
bake.help = "Create a project in ./tmp"

# Cleanup tasks
_remove_tmp = "rm -rf tmp"
clean.sequence = ["_remove_tmp", ]
clean.help = "Cleanup project."

[tool.ruff]
fix = true
lint.select = [ "ALL" ]
lint.ignore = [ "D203", "D211", "D212", "D213", "COM812" , "S101"]

[tool.pytest.ini_options]

# the goal here is to ignore template tests
testpaths = [ "tests" ]


