[project]
name = "python-package-cookiecutter"
version = "1.3.1"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "cookiecutter>=2.6.0",
    "poethepoet>=0.35.0",
    "pytest>=8.4.0",
    "ruff>=0.11.13",
]

[tool.poe.tasks]

test.cmd = "pytest"
test.help = "Test cookiecutter package."

ruff_check.cmd = "ruff check hooks tests"
ruff_format.cmd = "ruff format hooks tests"
ruff_check_template.cmd = "ruff --isolated check '{{ cookiecutter.package_name }}'/src '{{ cookiecutter.package_name }}'/tests"
ruff_format_template.cmd = "ruff --isolated format '{{ cookiecutter.package_name }}'/src '{{ cookiecutter.package_name }}'/tests"

ruff.sequence = [ "ruff_check", "ruff_check_template", "ruff_format", "ruff_format_template" ]

# Release tasks
_patch_bump = "uv version --bump patch"
_minor_bump = "uv version --bump minor"
_major_bump = "uv version --bump major"

_add = "git add pyproject.toml uv.lock"
_commit = {shell = "git commit -m v`uv version --short`"}
_tag = {shell = "git tag v`uv version --short`"}
_push = "git push --all"
_push_tags = "git push --tags"

_update_pyproject = ["_add", "_commit", "_tag", "_push_tags", "_push"]

release_patch.sequence = [ "_patch_bump", "_update_pyproject"]
release_patch.help = "Publish patch release."
release_minor.sequence = [ "_minor_bump", "_update_pyproject"]
release_minor.help = "Publish minor release."
release_major.sequence = [ "_major_bump", "_update_pyproject"]
release_major.help = "Publish major release."

release.ref = "release_patch"
release.help = "Publish patch release"

# Create a project with the template for local testing in tmp/thing.

_tmpdir = "mkdir -p tmp"
_generate = "cookiecutter --no-input -o tmp --overwrite-if-exists ."
bake.sequence = [ "_tmpdir", "_generate" ]
bake.help = "Create a project in ./tmp"

# Cleanup tasks
_remove_tmp = "rm -rf tmp"
_remove_gh_repo = "gh repo delete thing --yes"
clean.sequence = ["_remove_tmp", "_remove_gh_repo" ]
clean.help = "Cleanup project."

[tool.ruff]
fix = true
lint.select = [ "ALL" ]
lint.ignore = [ "D203", "D211", "D212", "D213", "COM812" , "S101", "BLE001"]

# Excluding Jinja formatted paths is kind of tricky.
# Escape '{{' as '[{][{]' and '}}' as '[}][}]'
exclude = [ "[{][{] cookiecutter.package_name [}][}]", ]

[tool.pytest.ini_options]
# Narrow to just tests to avoid finding {{ cookiecutter.package_name }}/tests
# which fail when executed in-place.
testpaths = [ "tests" ]


