[project]
name = "{{cookiecutter.package_name}}"
version = "{{cookiecutter.project_version}}"
description = "{{cookiecutter.project_short_description}}"
readme = "README.md"
license = "{{ cookiecutter.license }}"
authors = [{name = "{{ cookiecutter.github_username }}", email = "{{ cookiecutter.email }}"}]
repository = "{{ cookiecutter.repository }}"

requires-python = ">={{ cookiecutter.python_version_min }},<{{ cookiecutter.python_version_max }}"

dependencies = [
    "loguru",
    "typer",
{% if cookiecutter.use_pydantic_settings == "yes" %}    "pydantic_settings",{% endif %}
]
classifiers = [
{% if cookiecutter.license == "Apache-2.0" %}  "License :: OSI Approved :: Apache Software License",{% endif %}{% if cookiecutter.license == "MIT" %}  "License :: OSI Approved :: MIT License",{% endif %}
  "Development Status :: 4 - Beta",
  "Operating System :: OS Independent",
  "Intended Audience :: Developers",
  "Intended Audience :: End Users/Desktop",
  "Environment :: Console",
  "Topic :: Utilities",
  "Programming Language :: Python",
  "Programming Language :: Python :: {{ cookiecutter.python_version_min.split('.')[0] }}",
  "Programming Language :: Python :: {{ cookiecutter.python_version_min }}",
]

[project.scripts]
{{cookiecutter.cli_name}} = "{{ cookiecutter.package_name }}.__main__:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/{{ cookiecutter.package_name }}"]

[dependency-groups]
dev = [
    "black",
    "isort",
    "mypy",
    "poethepoet",
    "pytest",
    "pytest-cov",
    "ruff",
    "ty",
]

[tool.poe.tasks]

# Code Quality

_generate_coverage = "pytest --cov=./src/{{ cookiecutter.package_name }} --cov-report=html"
_open_report = "open htmlcov/index.html"
coverage.sequence = [ "_generate_coverage", "_open_report"]
coverage.help = "Generate HTML code coverage report and open it in a browser. [Code Quality]"

mypy.cmd = "mypy --config-file pyproject.toml src/{{ cookiecutter.package_name }}"
mypy.help = "Run mypy type checker on source. [Code Quality]"

ty.cmd = "ty check src/{{ cookiecutter.package_name }}"
ty.help = "Run ty type checker on source. [Code Quality]"

ruff.cmd = "ruff check src/{{ cookiecutter.package_name }}"
ruff.help = "Run ruff linter on source. [Code Quality]"

check.sequence = [ "ruff", "ty", "mypy" ]
check.help = "Run all code quality tools on source."

test.cmd = "pytest"
test.help = "Runs testing suites using pytest."

# Publish tasks

## update version in pyproject

_patch_bump = "uv version --bump patch"
_minor_bump = "uv version --bump minor"
_major_bump = "uv version --bump major"

## add, commit, tag and commit pyproject updated by bump

_add = "git add pyproject.toml uv.lock"
_commit = {shell = "git commit -m v`uv version --short`"}
_tag = { shell = "git tag v`uv version --short`" }
_push = "git push --all"
_push_tags = "git push --tags"

_update_pyproject = ["_add", "_commit", "_tag", "_push_tags", "_push"]

## Publish patch, minor or major releases
## See .github/workflows/release.yaml

publish_patch.sequence = ["_patch_bump", "_update_pyproject"]
publish_patch.help = "Publish a patch release."

publish_minor.sequence = ["_minor_bump", "_update_pyproject"]
publish_minor.help = "Publish a minor release."

publish_major.sequence = ["_major_bump", "_update_pyproject"]
publish_major.help = "Publish a major release."

publish.ref =  "publish_patch"
publish.help = "Publish a minor release."

# Clean

clean.cmd = "rm -rf htmlcov dist {{ cookiecutter.package_name }}.egg-info *.log"
clean.help = "Clean up the project directory."

# Tool Options

[tool.pytest.ini_options]

[tool.black]

[tool.isort]

[tool.ruff]

[tool.ty]

[mypy]

[mypy-loguru]
ignore_missing_imports = true

[mypy-typer]
ignore_missing_imports = true

{% if cookiecutter.use_pydantic_settings == "yes" %}[mypy-pydantic_settings]
ignore_missing_imports = true{% endif %}
